k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preview-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preview-app
  template:
    metadata:
      labels:
        app: preview-app
    spec:
      serviceAccountName: preview-bridge-sa
      containers:
      - name: app-container
        # Jenkins will automatically replace 'IMAGE_TAG' with the actual ECR path
        image: IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
